# unix

./: CMakeLists.txt  README.md  count.sh  test_select.c  test_shell_pipe.c
chapter11/: CMakeLists.txt  hex2dd  hex2dd.c  timeserver  timeserver.c
chapter2/: CMakeLists.txt  copy1  copy2  cp1.c  cp2.c  tail1.c  try.c  who1  who1.c  who2  who2.c  who2_1  who2_1.c  who3  who3.c  who3_func.c  who3_func.h
chapter3/: CMakeLists.txt  fileinfo  fileinfo.c  getoptions  getoptions.c  ls1  ls1.c
chapter4/: CMakeLists.txt  mkdir  mkdir.c  pwd1  pwd1.c
chapter4/find/: search.c  search.h
chapter4/makeR/: mkdirR  mkdirR.c  solve.h  solvefuc.c  solvetry  test_solve.c
chapter5/: CMakeLists.txt  echostate  echostate.c  listchar  listchar.c  setecho  setecho.c  write1  write1.c
chapter6/: CMakeLists.txt  README  play_again  play_again.c  rotate  rotate.c
chapter7/: CMakeLists.txt  hello2  hello2.c  hellocv  hellocv.c  rewind  rewind.c  watchOut
nargs/: CMakeLists.txt  main.c  nargs
